APIs/googleapis.com/tpu/v1/javascript-client/README.md
# cloud_tpu_api

CloudTpuApi - JavaScript client for cloud_tpu_api
TPU API provides customers with access to Google TPU technology.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_tpu_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_tpu_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudTpuApi = require('cloud_tpu_api');

var defaultClient = CloudTpuApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudTpuApi.ProjectsApi()
var parent = "parent_example"; // {String} Required. The parent resource name.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'filter': "filter_example", // {String} List filter.
  'orderBy': "orderBy_example", // {String} Sort results.
  'pageSize': 56, // {Number} The maximum number of items to return.
  'pageToken': "pageToken_example" // {String} The next_page_token value returned from a previous List request, if any.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.tpuProjectsLocationsAcceleratorTypesList(parent, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://tpu.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsAcceleratorTypesList**](docs/ProjectsApi.md#tpuProjectsLocationsAcceleratorTypesList) | **GET** /v1/{parent}/acceleratorTypes | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsList**](docs/ProjectsApi.md#tpuProjectsLocationsList) | **GET** /v1/{name}/locations | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsNodesCreate**](docs/ProjectsApi.md#tpuProjectsLocationsNodesCreate) | **POST** /v1/{parent}/nodes | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsNodesList**](docs/ProjectsApi.md#tpuProjectsLocationsNodesList) | **GET** /v1/{parent}/nodes | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsNodesReimage**](docs/ProjectsApi.md#tpuProjectsLocationsNodesReimage) | **POST** /v1/{name}:reimage | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsNodesStart**](docs/ProjectsApi.md#tpuProjectsLocationsNodesStart) | **POST** /v1/{name}:start | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsNodesStop**](docs/ProjectsApi.md#tpuProjectsLocationsNodesStop) | **POST** /v1/{name}:stop | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsOperationsCancel**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsCancel) | **POST** /v1/{name}:cancel | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsOperationsDelete**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsDelete) | **DELETE** /v1/{name} | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsOperationsList**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsList) | **GET** /v1/{name}/operations | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsTensorflowVersionsGet**](docs/ProjectsApi.md#tpuProjectsLocationsTensorflowVersionsGet) | **GET** /v1/{name} | 
*CloudTpuApi.ProjectsApi* | [**tpuProjectsLocationsTensorflowVersionsList**](docs/ProjectsApi.md#tpuProjectsLocationsTensorflowVersionsList) | **GET** /v1/{parent}/tensorflowVersions | 


## Documentation for Models

 - [CloudTpuApi.AcceleratorType](docs/AcceleratorType.md)
 - [CloudTpuApi.ListAcceleratorTypesResponse](docs/ListAcceleratorTypesResponse.md)
 - [CloudTpuApi.ListLocationsResponse](docs/ListLocationsResponse.md)
 - [CloudTpuApi.ListNodesResponse](docs/ListNodesResponse.md)
 - [CloudTpuApi.ListOperationsResponse](docs/ListOperationsResponse.md)
 - [CloudTpuApi.ListTensorFlowVersionsResponse](docs/ListTensorFlowVersionsResponse.md)
 - [CloudTpuApi.Location](docs/Location.md)
 - [CloudTpuApi.NetworkEndpoint](docs/NetworkEndpoint.md)
 - [CloudTpuApi.Node](docs/Node.md)
 - [CloudTpuApi.Operation](docs/Operation.md)
 - [CloudTpuApi.OperationMetadata](docs/OperationMetadata.md)
 - [CloudTpuApi.ReimageNodeRequest](docs/ReimageNodeRequest.md)
 - [CloudTpuApi.SchedulingConfig](docs/SchedulingConfig.md)
 - [CloudTpuApi.Status](docs/Status.md)
 - [CloudTpuApi.Symptom](docs/Symptom.md)
 - [CloudTpuApi.TensorFlowVersion](docs/TensorFlowVersion.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

